# future_router

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  why.md
future_router/: __init__.py  errors.py  funcs.py  proxies.py  resource_dummy.py  router.py  typings.py  utils.py
