[metadata]
name = future_router
version = attr: future_router.__version__
license_files = LICENSE
url = https://github.com/RimuEirnarn/future_router
author = RimuEirnarn
author_email = rimuru720@proton.me
description = A wrapper for Flask app (or blueprint) that can be initialised later.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/RimuEirnarn/future_router

[options]
packages = future_router
python_require = >= 3.11
